--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -53,7 +53,6 @@
         .fundo {
             width: 100vw;
             height: 78vh;
-            background-color: #1E90FF;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -91,24 +90,28 @@
         }
 
         .perfusao {
-            width: 48%;
+            width: 42%;
             background-color: #333333;
             box-shadow: 0px 0px 15px #1E90FF;
             border-radius: 18px;
             display: flex;
+            justify-content: space-evenly;
+            align-items: center;
         }
 
         .normal_anormal {
-            width: 48%;
+            width: 33%;
             background-color: #333333;
             box-shadow: 0px 0px 15px #1E90FF;
             border-radius: 18px;
+            align-items: center;
+            justify-content: space-evenly;
         }
 
         .linha5 {
             display: flex;
             height: 8%;
-            justify-content: space-between;
+            justify-content: space-evenly;
         }
 
         .form-check {
@@ -130,6 +133,39 @@
             align-items: center;
             width: 90%;
         }
+        .checks{
+            display: flex;
+        }
+        @media screen and (min-width: 768px) and (max-width: 1024px){
+            #pressao { 
+            width: 27% !important;
+
+        }
+        #pulso {
+            width: 21%;
+        }
+
+        }
+        @media screen and (max-width: 768px){
+
+            .perfusao{
+                width: 60%;
+                gap: 7px;
+            }
+
+            .linha5 {
+            display: block;
+            
+            
+        }
+        .normal_anormal{
+            padding-left: 22px !important;
+            width: 60% !important;
+            justify-content: space-around !important;
+            margin-top: 40px;
+        }
+        }
+
     </style>
 </head>
 
@@ -182,42 +218,62 @@
                 </div>
 
                 <div class="linha2">
-                    <!-- <div class="grupo2">
+                    <div class="grupo2">
                     <span>PULSO:</span>
                     <input type="text" class="text-line" id="pulso">
                     <span>B.C.P.M/RESPIRAÇÃO:</span>
                     <input type="text" class="text-line" id="pulso">
                     <span>M.R.M</span>
-                </div> -->
+                </div>
                 </div>
 
                 <div class="linha3">
-                    <!-- <div class="grupo3">
+                    <div class="grupo3">
                     <span>SATURAÇÃO:</span>
                     <input type="text" class="text-line" id="satura">
                     <span class="htg">%  /   HTG:</span>
                     <input type="text" class="text-line" id="satura">
-                </div> -->
+                </div>
                 </div>
 
                 <div class="linha4">
-                    <!-- <div class="grupo4">
+                    <div class="grupo4">
                     <span>TEMPERATURA:</span>
                     <input type="text" class="text-line" id="temperatura">
                     <span>C°</span>
-                </div> -->
+                </div>
                 </div>
 
                 <div class="linha5">
-                    <!-- <div class="perfusao">
-                    <span class="d-flex align-items-center pl-3" >PERFUSÃO:</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="perfusao">
+                        <span class="d-flex align-items-center" >PERFUSÃO:</span>
+                        <div class="checks">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                            <span><2SEG</span>
+                        </div>  
+                        <div class="checks"> 
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                            <span>>2SEG</span>
+                        </div> 
+                </div>
+                <div class="normal_anormal d-flex pl-2">
+                    <div class="d-flex" style="gap: 10px;">
+                        <span>NORMAL</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                    <div class="d-flex" style="gap: 10px;">
+                        <span>ANORMAL</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
                 </div>
-                <div class="normal_anormal">
-
-                </div> -->
                 </div>
             </div>
         </div>
