--- a/pages/cadastropaciente.html
+++ b/pages/cadastropaciente.html
@@ -78,6 +78,11 @@
         #genero {
             border-radius: 5px;
         }
+
+        .accordion-button:focus{
+            border-color: none;
+            box-shadow: none;
+        }
     </style>
 </head>
 
