--- a/pages/login.html
+++ b/pages/login.html
@@ -86,8 +86,8 @@
             <div class="form-group">
                 <div class="login mt-3 fw-bold">LOGIN
                 </div>
-                <input type="text" class="form-control" id="matricula" aria-describedby="emailHelp" placeholder="Nome">
-                <input type="password" class="form-control" id="senha" aria-describedby="emailHelp" placeholder="Senha">
+                <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+                <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
                 <div class="botao">
                     <button type="submit" class="btn btn-outline-primary btn-lg">Login</button>
                 </div>
