--- a/pages/situation.html
+++ b/pages/situation.html
@@ -225,15 +225,14 @@
         <div class="casa mt-9">
             <div class="column">
                 <div class="block px-10">
-                    <div class="descrition d-flex" style="">
+                    <div class="descrition d-flex">
                         <div class="esp">INCONSCIENTE
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
-
-                    <div class="descrition d-flex" style="">
+                    <div class="descrition d-flex">
                         <div class="esp">CONSCIENTE
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
