--- a/login.html
+++ b/login.html
@@ -84,13 +84,15 @@
     <div class="fundo">
         <div class="conteiner">
             <div class="form-group">
-                <div class="login mt-3 fw-bold">LOGIN
-                </div>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Username">
-                <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
-                <div class="botao">
-                    <button type="submit" class="btn btn-outline-primary btn-lg">Login</button>
-                </div>
+                <form action="processamento_login.php" method="post">
+                    <div class="login mt-3 fw-bold">LOGIN
+                    </div>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
+                    <div class="botao">
+                        <button type="submit" class="btn btn-outline-primary btn-lg">Login</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
