--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -167,7 +167,7 @@
                 <br>
                 <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="KM FINAL">
                 <br>
-                <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="COD. SIA/SUS">
+                <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="CÓD. SIA/SUS">
                 <br>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="anotherTimescod1" id="flexRadioDefault1">
