--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -172,6 +172,23 @@
             width: 100%;
         }
         
+        @media screen and (max-width: 767px){
+            #temperatura{
+                width: 20%;
+            }
+
+            .linha5{
+                display: block;
+            }
+
+            .perfusao{
+                width: 100%;
+            }
+
+            .normal_anormal{
+                width: 100% !important;
+            }
+        }
     </style>
 </head>
 
