--- a/pages/objetos.html
+++ b/pages/objetos.html
@@ -38,6 +38,8 @@
         body {
             background-color: #c1c1c1;
             font-family: 'Inter', sans-serif;
+            height: 100vh;
+            color: white;
         }
 
         /*Definindo cor da Navbar*/
@@ -75,7 +77,7 @@
 <body>
 
     <!-- container geral -->
-    <div class="container-fluid p-0">
+    <div class="container-fluid p-0 h-100">
 
         <!-- navbar -->
         <nav class="navbar navbar-dark" id="nav">
@@ -170,10 +172,13 @@
         </nav>
 
         <!-- container dos cards -->
-        <div class="container-fluid d-flex align-items-center">
+        <div class="container d-flex align-items-center h-100">
 
-            <div class="container card" style="height: 300px; width: 300px;">
-
+            <div class="container card h-75 w-75 p-3" >
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 80%"></textarea>
+                    <label for="floatingTextarea2">Comments</label>
+                  </div>
             </div>
 
         </div>
