--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=UTF-8>
     <!-- Linkagem -->
-    <title>Tipo de Ocorrência</title>
+    <title>TIPO DE OCORRÊNCIA (PRÉ-HOSPITALAR)</title>
     <!-- Titulo -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
