--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -155,7 +155,7 @@
 
             .column {
                 display: flex;
-                flex-direction: column;
+                flex-direction: iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiicolumn;
                 width: 93%;
                 height: 100vh;
                 box-sizing: border-box;
