--- a/pages/objetos.html
+++ b/pages/objetos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=UTF-8>
     <!-- Linkagem -->
-    <title>Anamnese na Emergência Médica</title>
+    <title>OBJETOS RECOLHIDOS</title>
     <!-- Titulo -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
@@ -71,6 +71,10 @@
             align-items: center;
             width: 90%;
         }
+        .form-control:focus {
+            border-color: rgb(6, 108, 243);
+            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
+        }
     </style>
 </head>
 
@@ -83,7 +87,7 @@
         <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="navbar-title mt-3 fw-bold">ANAMNESE DA EMERGÊNCIA MÉDICA</p>
+                <p class="navbar-title mt-3 fw-bold">OBJETOS RECOLHIDOS</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -175,9 +179,9 @@
         <div class="container d-flex align-items-center h-100">
 
             <div class="container card h-75 w-75 p-3" >
-                <div class="form-floating">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 80%"></textarea>
-                    <label for="floatingTextarea2">Comments</label>
+                <div class="form-floating h-100">
+                    <textarea class="form-control h-100" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 80%"></textarea>
+                    <label for="floatingTextarea2">Objetos</label>
                   </div>
             </div>
 
