--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -59,7 +59,21 @@
     }
     .row{
         background-color: #333333;
+        height: 18%;
+        border-radius: 13px;
+        display: flex;
+        align-items: center;
+        padding-left: 15px;
+        justify-content: space-between;
     }
+    .normal_anormal {
+            width: 27%;
+            background-color: #333333;
+            box-shadow: 0px 0px 15px #1E90FF;
+            border-radius: 5px;
+            align-items: center;
+            margin-right: 27px;
+        }
 
 </style>
 </head>
@@ -97,18 +111,43 @@
             </div>
         </div>
     </nav>
-    <div class="container-sm">
-        <div class="row">
-            DISTURBIO 
-        </div>
-        <div class="row">
-            DISTURBIO 
-        </div>
-        <div class="row">
-            DISTURBIO 
-        </div>
-        <div class="row">
-            DISTURBIO 
+    <div class="container mt-5 d-flex justify-content-center">
+        <div class="col-10">
+                <div class="row mt-4">
+                    DISTURBIO DE COMPORTAMENTO
+                </div>
+                <div class="row mt-4">
+                    ENCONTRADO DE CAPACETE
+                </div>
+                <div class="row mt-4">
+                    ENCONTRADO DE CINTO
+                </div>
+                <div class="row mt-4">
+                    PARA-BRISAS AVARIADO 
+                </div>
+                <div class="row mt-4">
+                    CAMINHANDO NA CENA
+                </div>
+                <div class="row mt-4">
+                    PAINEL AVARIADO 
+                </div>
+                <div class="row mt-4">
+                    VOLANTE TORCIDO
+                    <div class="normal_anormal d-flex pl-2">
+                        <div class="d-flex" style="gap: 10px;">
+                            <span>SIM</span>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                        <div class="d-flex" style="gap: 10px;">
+                            <span>NÃO</span>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
     <!-- <div class="fundo">
