--- a/pages/login2.html
+++ b/pages/login2.html
@@ -67,7 +67,7 @@
         @media screen and (min-width: 768px) and (max-width: 1024px){
             #box{
                 width: 80% !important;
-                height: 45%;
+                height: 45% !important;
             }
 
             .form-control{
@@ -90,6 +90,13 @@
             #box{
                 width: 55% !important;
                 height: 70% !important;
+            }
+        }
+
+        @media screen and (min-width: 667px){
+            #box{
+                width: 75%;
+                height: 90%;
             }
         }
 
