--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -226,7 +226,7 @@
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
                                                 <label class="fonte">
-                                                    <input type="checkbox">
+                                                    <input type="checkbox" name="escolher">
                                                     CRÍTICO
                                                 </label>
                                             </div>
@@ -239,7 +239,7 @@
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
                                                 <label class="fonte">
-                                                    <input type="checkbox">
+                                                    <input type="checkbox" name="escolher">
                                                     INSTAVEL
                                                 </label>
                                             </div>
@@ -254,7 +254,7 @@
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
                                                 <label class="fonte">
-                                                    <input type="checkbox">
+                                                    <input type="checkbox" name="escolher">
                                                     ESTÁVEL
                                                 </label>
                                             </div>
@@ -267,7 +267,7 @@
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
                                                 <label class="fonte">
-                                                    <input type="checkbox">
+                                                    <input type="checkbox" name="escolher">
                                                     POTENCIALMENTE ESTAVEL
                                                 </label>
                                             </div>
