--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -288,6 +288,9 @@
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
+                        <div class="teste">
+                            
+                        </div>
                     </div>
                     <div class="block px-3">
                         <div class="descrition d-flex" style="width: 100%;">CONVULSÃO
