--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -158,6 +158,12 @@
 
 
         }
+
+        .form-check {
+            display: flex;
+            
+            background-color: aqua;
+        }
     </style>
 </head>
 
@@ -201,7 +207,7 @@
         <!-- CheckBox -->
         <div class="casa mt-4">
             <div class="column">
-                <div class="container-fluid-linha" >
+                <div class="container-fluid-linha">
                     <div class="block px-3">
                         <div class="descrition d-flex" style="width: 100%;">ABDOMEM SENSÍVEL OU RÍGIDO
                             <div class="form-check">
@@ -287,6 +293,9 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
+                        </div>
+                        <div class="form-check2">
+
                         </div>
                     </div>
                     <div class="block px-3">
