--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -82,6 +82,11 @@
         @media screen and (min-width: 768px) {
             .gray-box {
                 width: 100% !important;
+                height: 150px;
+            }
+
+            .icone{
+                margin-top: 10px;
             }
         }
 
@@ -239,12 +244,12 @@
                                     <div>
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
-                                                <label class="fonte">
-                                                    <input type="radio" name="escolher">
+                                                <label class="fonte" style="margin-left: 20px;">
+                                                    <input class="form-check-input" type="radio" name="escolher">
                                                     CRÍTICO
                                                 </label>
                                             </div>
-                                            <i class="far fa-frown fa-3x mr-2"></i>
+                                            <i class="far fa-frown fa-3x mr-2 icone"></i>
                                         </div>
                                     </div>
 
@@ -252,12 +257,12 @@
                                     <div>
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
-                                                <label class="fonte">
-                                                    <input type="radio" name="escolher">
+                                                <label class="fonte" style="margin-left: 20px;">
+                                                    <input class="form-check-input" type="radio" name="escolher">
                                                     INSTAVEL
                                                 </label>
                                             </div>
-                                            <i class="fas fa-thermometer-half fa-3x mr-2"></i>
+                                            <i class="fas fa-thermometer-half fa-3x mr-2 icone"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -267,12 +272,12 @@
                                     <div>
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
-                                                <label class="fonte">
-                                                    <input type="radio" name="escolher">
+                                                <label class="fonte" style="margin-left: 20px;">
+                                                    <input class="form-check-input" type="radio" name="escolher">
                                                     ESTÁVEL
                                                 </label>
                                             </div>
-                                            <i class="far fa-smile fa-3x mr-2"></i>
+                                            <i class="far fa-smile fa-3x mr-2 icone"></i>
                                         </div>
                                     </div>
 
@@ -280,12 +285,12 @@
                                     <div>
                                         <div class="gray-box">
                                             <div class="d-flex align-items-center">
-                                                <label class="fonte">
-                                                    <input type="radio" name="escolher">
+                                                <label class="fonte" style="margin-left: 20px;">
+                                                    <input class="form-check-input" type="radio" name="escolher">
                                                     POTENCIALMENTE ESTAVEL
                                                 </label>
                                             </div>
-                                            <i class="far fa-meh fa-3x mr-2"></i>
+                                            <i class="far fa-meh fa-3x mr-2 icone"></i>
                                         </div>
                                     </div>
                                 </div>
