--- a/login.html
+++ b/login.html
@@ -104,20 +104,22 @@
 </head>
 
 <body>
-    <form action="processamento_login.php">
-        <div class="container d-flex justify-content-center align-items-center geral" style="height: 100vh;">
-            <div class="container-fluid d-flex flex-column align-items-center justify-content-center" id="box" style="padding-top: 16px; padding-bottom: 16px;">
+    <form action="processamento_login.php" method="post">
+        <div class="form-group">
+            <div class="container d-flex justify-content-center align-items-center geral" style="height: 100vh;">
+                <div class="container-fluid d-flex flex-column align-items-center justify-content-center" id="box" style="padding-top: 16px; padding-bottom: 16px;">
 
-                <h1>LOGIN</h1>
-                <br>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Username">
-                <br>
-                <br>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
-                <br>
+                    <h1>LOGIN</h1>
+                    <br>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+                    <br>
+                    <br>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
+                    <br>
+                    <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button" style="margin-top: 0.5rem;">Login</button>
+            </div>
+        </div>
     </form>
-
-    <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button" style="margin-top: 0.5rem;">Login</button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
