--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -44,7 +44,7 @@
     .espaço_botao {
             display: flex;
             width: 100%;
-            height: 15vh;
+            height: 10vh;
             justify-content: center;
         }
     .botao {
@@ -242,7 +242,7 @@
             </div>
           </div>
         </nav>
-    <form action="" style="height: 100vh;">
+    <form action="" style="height: 66vmax;">
         <div class="form-group">
             <div class="container mt-5 d-flex justify-content-center">
                 <div class="col-10">
